--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /node_modules/
 yarn.lock
+ressources/Offerzen Custom Tileset.sketch
+ressources/Offerzen Custom Tileset.sketch
+ressources/typo.psd
+src/.DS_Store
